--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,12 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
+    - uses: browser-actions/setup-chrome@latest
+    - run: chrome --version
+    
     - name: Build with Maven
-      run: mvn test -Ptest -Dbrowser=chrome
+    - run: mvn -B clean test
       
 
 
