--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,12 +28,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
         
-    - name: Build    
-    - uses: browser-actions/setup-chrome@latest
-    - run: chrome --version
-    
     - name: Build with Maven
-    - run: mvn -B clean test
+      run: mvn clean test
       
 
 
