--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         cache: maven
         
     - name: Build with Maven
-      run: mvn test -Ptest
+      run: mvn clean test -Ptest
       
 
 
