--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with maven
-    - run: mvn -B package --file pom.xml
+    - run: mvn test -Ptest
         
 
 
