Add Few More TestCases And Refactor Structure

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-
+        -name: Run maven test
+        -run: mvn test -Ptest
 
 
